move forward, loading & API declaration

--- a/mock/user/index.yml
+++ b/mock/user/index.yml
@@ -23,6 +23,7 @@
     method: DELETE
   response:
   - status: 401
+    latency: 2000
     headers:
       content-type: application/json
       server: stubbedServer/4.2
