--- a/mock/user/index.yml
+++ b/mock/user/index.yml
@@ -3,6 +3,7 @@
     method: GET
   response:
   - status: 200
+    latency: 2000
     headers:
       content-type: application/json
       server: stubbedServer/4.2
